testsuite/tests/typecheck/should_fail/TyAppPat_MisplacedApplication.stderr

TyAppPat_MisplacedApplication.hs:9:6: error:
    Parse error in pattern: MkT x
